apps/sample/httpbin/service.yaml
# httpbin service
# ClusterIP service for internal access
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: ingress-sample
  labels:
    app: httpbin
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: httpbin
